--- a/css/style.css
+++ b/css/style.css
@@ -18,13 +18,6 @@ table {
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
 }
 
-table {
-  width: 1000px;
-  border-collapse: collapse;
-  overflow: hidden;
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-}
-
 input[type='text'] {
   width: 100%;
   background-color: transparent;
@@ -37,11 +30,10 @@ input[type='text'] {
 }
 
 .container {
-  position: absolute;
-  top: 65%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
 }
 
 td,
@@ -72,4 +64,10 @@ tbody td:hover:before {
   bottom: -9999px;
   background-color: rgba(255, 255, 255, 0.2);
   z-index: -1;
+}
+
+#basic tr td:nth-child(1) {
+  background-image: url('css/delete.png');
+  background-repeat: no-repeat;
+  background-position: center;
 }
